--- a/ACMS/templates/ACMS/index.html
+++ b/ACMS/templates/ACMS/index.html
@@ -101,9 +101,14 @@
           <div class="modal-body">
               {% for message in messages %}
                   {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR  %}
-                    <div id="loginErrorAlert" class="alert fade in alert-danger alert-dismissible" role="alert">
+                    <div  class="loginAlert alert fade in alert-danger alert-dismissible" role="alert">
                       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                       <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;{{ message }}
+                    </div>
+                  {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+                    <div  class="loginAlert alert fade in alert-success alert-dismissible" role="alert">
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;{{ message }}
                     </div>
                   {% endif %}
               {% endfor %}
