--- a/ACMS/templates/ACMS/base.html
+++ b/ACMS/templates/ACMS/base.html
@@ -52,7 +52,7 @@
       <!-- Navbar Right Menu -->
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
-          <!-- Messages: style can be found in dropdown.less-->
+          <!-- Messages: style can be found in dropdown.less -->
           <li class="dropdown messages-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-envelope-o"></i>
@@ -279,7 +279,7 @@
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Change Password</a>
+                  <a href="#" data-target="#passwordFormModal" data-toggle="modal" class="btn btn-default btn-flat">Change Password</a>
                 </div>
                 <div class="pull-right">
                   <a href="{%  url 'ACMS:index'  %}" class="btn btn-default btn-flat">Sign out</a>
@@ -459,8 +459,6 @@
               </div>
                         <!-- /.box -->
           {% endif %}
-
-
       {% endfor %}
 
 
@@ -734,7 +732,7 @@
 </div><!-- modal -->
 <!-- end of patient modal form -->
 
-!-- drug form -->
+<!-- drug form -->
 <div class="modal fade modalForm" id="drugFormModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" data-backdrop ="static" >
       <div  class="modal-dialog modal-sm " role="document">
         <div class="modal-content">
@@ -803,6 +801,41 @@
       </div><!-- modal-dialog -->
 </div><!-- modal -->
 <!-- end of hmo modal form -->
+
+<!-- change password form -->
+    <div class="modal fade modalForm" id="passwordFormModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" data-backdrop ="static" >
+          <div  class="modal-dialog modal-sm " role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" name="button" class="close" data-dismiss="modal" arial-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 id="modalLabel">Change Password</h4>
+              </div><!-- modal-header -->
+              <div class="modal-body">
+                 <form id="passwordForm" action="{% url 'ACMS:change_password' %}" method="post">
+                     {% csrf_token %}
+                  <div class="form-group">
+                    <label for="current-password">Current Password</label>
+                    {{ change_password_form.currentPassword }}
+                  </div>
+                  <div class="form-group has-feedback">
+                    <label for="new-password">New Password</label>
+                    {{ change_password_form.newPassword }}
+                    <span class="form-control-feedback" aria-hidden="true"></span>
+                  </div>
+                  <div class="form-group has-feedback">
+                    <label for="confirm-new-password">Confirm New Password</label>
+                    {{ change_password_form.confirmNewPassword }}
+                    <span class="form-control-feedback" aria-hidden="true"></span>
+                  </div>
+                  <div class="form-group">
+                      <input style="width: 100%" class= "btn btn-danger" type="submit" value="Change Password" >
+                  </div>
+                </form>
+              </div><!-- modal-body -->
+            </div><!-- modal-content -->
+          </div><!-- modal-dialog -->
+    </div><!-- modal -->
+<!-- end of change password form -->
 
 <!-- jQuery 2.2.3 -->
 <script src='{% static "ACMS/AdminLTE-2.3.7/plugins/jQuery/jquery-2.2.3.min.js" %}'></script>
